--- a/index-de.html
+++ b/index-de.html
@@ -11,6 +11,7 @@
             <nav>
                 <a href="index.html">EN</a>
                 <a href="index-de.html">DE</a>
+                <button id="toggleCodeBtn">code ein/aus</button>
             </nav>
         </header>
 
